// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage should render the home page 1`] = `
<Layout
  description="What do you want to learn? Learn for free, always. Any subject you want. And Sagefy saves you time and effort by adapting to what you know and where you want to go."
  page="HomePage"
  title="Learn anything, adapted for you. Free."
>
  <section
    className="ta-c"
  >
    <h1>
      What do you want to learn? 
      <Icon
        i="search"
        s="xxl"
      />
    </h1>
    <form
      action="/search-subjects"
    >
      <p>
        <input
          aria-label="Search"
          autoFocus={true}
          name="q"
          placeholder="example: Music"
          size="40"
          type="search"
        />
      </p>
      <p>
        <button
          type="submit"
        >
          <Icon
            i="search"
            s="m"
          />
           Search
        </button>
      </p>
    </form>
  </section>
  <section
    className="ta-r"
  >
    <p>
      <small>
        <Link
          replace={false}
          to="/log-in"
        >
          <Icon
            i="logIn"
            s="m"
          />
           Log In
        </Link>
         
        or
         
        <Link
          replace={false}
          to="/sign-up"
        >
          <Icon
            i="signUp"
            s="m"
          />
           Sign Up
        </Link>
      </small>
    </p>
  </section>
  <section>
    <div
      className="ta-c m-yc"
    >
      <img
        alt="astrolabe"
        height="120"
        src="/astrolabe.svg"
      />
      <h2>
        Sagefy
      </h2>
      <p>
        <em>
          Learn anything, adapted for you. Free.
        </em>
      </p>
    </div>
  </section>
  <section>
    <ul>
      <li>
        <Icon
          i="adapt"
          s="m"
        />
         
        <strong>
          Adaptive Learning.
        </strong>
         Sagefy optimizes based on what you already know and what your goal is. Get the most out of your time and effort spent.
      </li>
      <li>
        <Icon
          i="open"
          s="m"
        />
         
        <strong>
          Open Content.
        </strong>
         Anyone can view, share, create, and edit content. Because anyone can contribute, you can learn anything you want.
      </li>
      <li>
        <ExternalLink
          href="https://youtu.be/gFn4Q9tx7Qs"
        >
          <Icon
            i="video"
            s="m"
          />
           Watch the overview video
        </ExternalLink>
        .
      </li>
    </ul>
  </section>
  <Footer
    role="sg_anonymous"
  />
</Layout>
`;

exports[`HomePage should render the logged in home page 1`] = `
<Layout
  description="What do you want to learn? Learn for free, always. Any subject you want. And Sagefy saves you time and effort by adapting to what you know and where you want to go."
  page="HomePage"
  title="Learn anything, adapted for you. Free."
>
  <section
    className="ta-c"
  >
    <h1>
      What do you want to learn? 
      <Icon
        i="search"
        s="xxl"
      />
    </h1>
    <form
      action="/search-subjects"
    >
      <p>
        <input
          aria-label="Search"
          autoFocus={true}
          name="q"
          placeholder="example: Music"
          size="40"
          type="search"
        />
      </p>
      <p>
        <button
          type="submit"
        >
          <Icon
            i="search"
            s="m"
          />
           Search
        </button>
      </p>
    </form>
  </section>
  <section
    className="ta-r"
  >
    <p>
      <small>
        <Link
          replace={false}
          to="/dashboard"
        >
          Go to 
          <Icon
            i="dashboard"
            s="m"
          />
           Dashboard
        </Link>
      </small>
    </p>
  </section>
  <section>
    <div
      className="ta-c m-yc"
    >
      <img
        alt="astrolabe"
        height="120"
        src="/astrolabe.svg"
      />
      <h2>
        Sagefy
      </h2>
      <p>
        <em>
          Learn anything, adapted for you. Free.
        </em>
      </p>
    </div>
  </section>
  <section>
    <ul>
      <li>
        <Icon
          i="adapt"
          s="m"
        />
         
        <strong>
          Adaptive Learning.
        </strong>
         Sagefy optimizes based on what you already know and what your goal is. Get the most out of your time and effort spent.
      </li>
      <li>
        <Icon
          i="open"
          s="m"
        />
         
        <strong>
          Open Content.
        </strong>
         Anyone can view, share, create, and edit content. Because anyone can contribute, you can learn anything you want.
      </li>
      <li>
        <ExternalLink
          href="https://youtu.be/gFn4Q9tx7Qs"
        >
          <Icon
            i="video"
            s="m"
          />
           Watch the overview video
        </ExternalLink>
        .
      </li>
    </ul>
  </section>
  <Footer
    role="sg_user"
  />
</Layout>
`;
